fix: :bug: fixes image journal entries not showing up

--- a/src/foundryvtt-gmScreen.scss
+++ b/src/foundryvtt-gmScreen.scss
@@ -163,6 +163,10 @@ $transition-timing: 400ms;
 
     .compact-journal-entry {
       min-height: 100%; // needed for dnd5e
+
+      > form {
+        min-height: 100%; // used for image journals
+      }
     }
 
     .editor {
